@@ -435,18 +435,15 @@ struct linger {
 #define WSAESTALE (WSABASEERR+70)
 #define WSAEREMOTE (WSABASEERR+71)
 
-#define WSAEDISCON (WSABASEERR+101)
-
 #define WSASYSNOTREADY (WSABASEERR+91)
 #define WSAVERNOTSUPPORTED (WSABASEERR+92)
 #define WSANOTINITIALISED (WSABASEERR+93)
 
+#define WSAEDISCON (WSABASEERR+101)
+
 #define WSAHOST_NOT_FOUND (WSABASEERR+1001)
-
 #define WSATRY_AGAIN (WSABASEERR+1002)
-
 #define WSANO_RECOVERY (WSABASEERR+1003)
-
 #define WSANO_DATA (WSABASEERR+1004)
 #endif
 
