@@ -5,7 +5,6 @@
  */
 #ifndef _WINSOCK2API_
 #define _WINSOCK2API_
-#define _WINSOCKAPI_
 
 #ifndef INCL_WINSOCK_API_TYPEDEFS
 #define INCL_WINSOCK_API_TYPEDEFS 0
@@ -35,17 +34,20 @@
 extern "C" {
 #endif
 
+#ifndef _WINSOCKAPI_
   typedef unsigned char u_char;
   typedef unsigned short u_short;
   typedef unsigned int u_int;
   typedef unsigned long u_long;
   typedef unsigned __int64 u_int64;
   typedef INT_PTR SOCKET;
+#endif
 
 #ifndef FD_SETSIZE
 #define FD_SETSIZE 64
 #endif
 
+#ifndef _WINSOCKAPI_
   typedef struct fd_set {
     u_int fd_count;
     SOCKET fd_array[FD_SETSIZE];
@@ -57,6 +59,7 @@ extern "C" {
 #define FD_SET(fd,set) do { u_int __i; for(__i = 0;__i < ((fd_set *)(set))->fd_count;__i++) { if (((fd_set *)(set))->fd_array[__i]==(fd)) { break; } } if (__i==((fd_set *)(set))->fd_count) { if (((fd_set *)(set))->fd_count < FD_SETSIZE) { ((fd_set *)(set))->fd_array[__i] = (fd); ((fd_set *)(set))->fd_count++; } } } while(0)
 #define FD_ZERO(set) (((fd_set *)(set))->fd_count=0)
 #define FD_ISSET(fd,set) __WSAFDIsSet((SOCKET)(fd),(fd_set *)(set))
+#endif
 
 #ifndef _TIMEVAL_DEFINED /* also in winsock[2].h */
 #define _TIMEVAL_DEFINED
@@ -92,6 +95,7 @@ extern "C" {
 
 #define h_addr h_addr_list[0]
 
+#ifndef _WINSOCKAPI_
   struct hostent {
     char *h_name;
     char **h_aliases;
@@ -124,6 +128,7 @@ extern "C" {
     char **p_aliases;
     short p_proto;
   };
+#endif
 
 #define IPPROTO_IP 0
 #define IPPROTO_HOPOPTS 0
@@ -232,16 +237,19 @@ extern "C" {
 
 #define ADDR_ANY INADDR_ANY
 
+#ifndef _WINSOCKAPI_
   struct sockaddr_in {
     short sin_family;
     u_short sin_port;
     struct in_addr sin_addr;
     char sin_zero[8];
   };
+#endif
 
 #define WSADESCRIPTION_LEN 256
 #define WSASYS_STATUS_LEN 128
 
+#ifndef _WINSOCKAPI_
   typedef struct WSAData {
     WORD wVersion;
     WORD wHighVersion;
@@ -259,6 +267,7 @@ extern "C" {
     char *lpVendorInfo;
 #endif
   } WSADATA,*LPWSADATA;
+#endif
 
 #define INVALID_SOCKET (SOCKET)(~0)
 #define SOCKET_ERROR (-1)
@@ -345,10 +354,12 @@ extern "C" {
 
 #define AF_MAX 32
 
+#ifndef _WINSOCKAPI_
   struct sockaddr {
     u_short sa_family;
     char sa_data[14];
   };
+#endif
 
 #define _SS_MAXSIZE 128
 #define _SS_ALIGNSIZE (sizeof(__int64))
@@ -365,10 +376,12 @@ extern "C" {
 
   };
 
+#ifndef _WINSOCKAPI_
   struct sockproto {
     u_short sp_family;
     u_short sp_protocol;
   };
+#endif
 
 #define PF_UNSPEC AF_UNSPEC
 #define PF_UNIX AF_UNIX
@@ -398,10 +411,12 @@ extern "C" {
 
 #define PF_MAX AF_MAX
 
+#ifndef _WINSOCKAPI_
   struct linger {
     u_short l_onoff;
     u_short l_linger;
   };
+#endif
 
 #define SOL_SOCKET 0xffff
 
@@ -506,6 +521,12 @@ extern "C" {
 #define WSAVERNOTSUPPORTED (WSABASEERR+92)
 #define WSANOTINITIALISED (WSABASEERR+93)
 #define WSAEDISCON (WSABASEERR+101)
+#define WSAHOST_NOT_FOUND (WSABASEERR+1001)
+#define WSATRY_AGAIN (WSABASEERR+1002)
+#define WSANO_RECOVERY (WSABASEERR+1003)
+#define WSANO_DATA (WSABASEERR+1004)
+#endif
+
 #define WSAENOMORE (WSABASEERR+102)
 #define WSAECANCELLED (WSABASEERR+103)
 #define WSAEINVALIDPROCTABLE (WSABASEERR+104)
@@ -517,10 +538,6 @@ extern "C" {
 #define WSA_E_NO_MORE (WSABASEERR+110)
 #define WSA_E_CANCELLED (WSABASEERR+111)
 #define WSAEREFUSED (WSABASEERR+112)
-#define WSAHOST_NOT_FOUND (WSABASEERR+1001)
-#define WSATRY_AGAIN (WSABASEERR+1002)
-#define WSANO_RECOVERY (WSABASEERR+1003)
-#define WSANO_DATA (WSABASEERR+1004)
 #define WSA_QOS_RECEIVERS (WSABASEERR + 1005)
 #define WSA_QOS_SENDERS (WSABASEERR + 1006)
 #define WSA_QOS_NO_SENDERS (WSABASEERR + 1007)
@@ -548,7 +565,6 @@ extern "C" {
 #define WSA_QOS_ESDMODEOBJ (WSABASEERR + 1029)
 #define WSA_QOS_ESHAPERATEOBJ (WSABASEERR + 1030)
 #define WSA_QOS_RESERVED_PETYPE (WSABASEERR + 1031)
-#endif
 
 #define h_errno WSAGetLastError()
 #define HOST_NOT_FOUND WSAHOST_NOT_FOUND
@@ -1396,4 +1412,9 @@ extern "C" {
 #ifdef IPV6STRICT
 #include <wsipv6ok.h>
 #endif
+
+#ifndef _WINSOCKAPI_
+#define _WINSOCKAPI_
+#endif
+
 #endif
