@@ -1,3 +1,7 @@
+2007-10-18  Kai Tietz  <kai.tietz@onevision.com>
+
+	* winsock.h, winsock2.h: Make them compatible to each other.
+
 2007-10-17  Kai Tietz  <kai.tietz@onevision.com>
 
 	* time.h: _daylight,_dstbias,_timezone are variables.
